# RenameInFilesAndFolders

./: .gitignore  CMakeLists.txt  FolderTree.cpp  FolderTree.h  InputWidget.cpp  InputWidget.h  InputWidget.ui  LICENSE  LogoWidget.h  MainWidget.cpp  MainWidget.h  PreviewWidget.h  PreviewWidget.ui  README.md  RenameInFilesAndFolders.precompiled.h  RenameModel.cpp  RenameModel.h  SearchDrop.cpp  SearchDrop.h  Settings.h  _clang-format
AppIcon/: RenameInFilesAndFolders.afdesign  RenameInFilesAndFolders.icns
src/: FileSystemModel.cpp  FileSystemModel.h  FolderTree.cpp  FolderTree.h  Global.h  InputWidget.cpp  InputWidget.h  LogoWidget.cpp  LogoWidget.ui  MainWidget.cpp  MainWidget.h  MainWidget.ui  PreviewWidget.cpp  PreviewWidget.h  RenameInFilesAndFolders.pro  RenameModel.cpp  RenameModel.h  SearchDrop.cpp  SearchDrop.h  Settings.cpp  Settings.h
src/Icons/: Icons.qrc  create.py
